src/test/ui/enum-variant-types/invalid_variant.stderr
error[E0308]: mismatched types
  --> $DIR/invalid_variant.rs:8:9
   |
LL |     bar(x);
   |         ^ expected enum `Foo`, found a different enum `Foo`
   |
   = note: expected enum variant `Foo::Variant1`
              found enum variant `Foo::Variant2`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
